--- a/CustomUiComponents/build.gradle
+++ b/CustomUiComponents/build.gradle
@@ -4,11 +4,14 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
-        
+        def nav_version = "2.1.0"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,7 +21,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
 
