--- a/CustomUiComponents/app/build.gradle
+++ b/CustomUiComponents/app/build.gradle
@@ -39,5 +39,15 @@ dependencies {
     // GSON
     implementation 'com.google.code.gson:gson:2.8.5'
 
+    // Testing
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'org.mockito:mockito-core:2.28.2'
+    // required if you want to use Mockito for Android tests
+    androidTestImplementation 'org.mockito:mockito-android:2.28.2'
+
+
     implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta2"
 }
