--- a/CustomUiComponents/app/build.gradle
+++ b/CustomUiComponents/app/build.gradle
@@ -39,14 +39,30 @@ dependencies {
     // GSON
     implementation 'com.google.code.gson:gson:2.8.5'
 
+    implementation 'androidx.annotation:annotation:1.1.0';
+
     // Testing
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test:rules:1.2.0'
-    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    testImplementation 'org.mockito:mockito-core:2.28.2'
-    // required if you want to use Mockito for Android tests
+    // JUnit 4
+    testImplementation "junit:junit:4.12"
+
+    // Mockito
+    testImplementation "org.mockito:mockito-core:2.28.2"
+    androidTestImplementation 'org.mockito:mockito-core:2.28.2'
     androidTestImplementation 'org.mockito:mockito-android:2.28.2'
+
+    // PowerMock
+    testImplementation "org.powermock:powermock-core:2.0.0-beta.5"
+    testImplementation "org.powermock:powermock-module-junit4:2.0.0-beta.5"
+    testImplementation "org.powermock:powermock-api-mockito2:2.0.0-beta.5"
+
+    // Instrumented test dependencies. Do not change these.
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test:rules:1.1.1'
+    androidTestImplementation 'androidx.test:monitor:1.1.1'
+
+    // Fragment testing helpers
+    debugImplementation 'androidx.fragment:fragment-testing:1.1.0-beta01'
 
 
     implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta2"
