--- a/CustomUiComponents/app/build.gradle
+++ b/CustomUiComponents/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 
 android {
@@ -35,6 +36,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
 
+    // Kotlin Framework
+    implementation "androidx.core:core-ktx:1.1.0"
 
     // GSON
     implementation 'com.google.code.gson:gson:2.8.5'
